Forward browser action bar activation to background page.

This fixes the following three tests for UAv2:
- BrowserActionApiTest.TestPictureInPictureOnBrowserActionIconClick
- PictureInPictureLazyBackgroundPageApiTest.PictureInPictureInBackgroundPage
- NotificationsApiTest.TestUserGesture

Bug: 860718
Change-Id: I004f7a3922b7b9f39f4371c0dfdd439c6f0b9a07
Reviewed-on: https://chromium-review.googlesource.com/c/1336029
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Commit-Queue: Mustaq Ahmed <mustaq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608767}
Former-commit-id: 4c316baedb269c0b2a1f3b19ae3e88355ea1b39a